--- a/css/style.css
+++ b/css/style.css
@@ -17,23 +17,37 @@ body {
     color: white;
     text-align: center;
     position: relative;
+    top: 52px;
+    z-index: 100;
 }
-
+.parent-container{
+    position: relative;
+    top: -53px;
+}
+.logo-section{
+    width: 100%;
+    text-align: center;
+}
 /* الشعار */
 .header-logo {
     max-height: 80px;
     max-width: 100vw;
+    text-align: center;
+    margin: auto;
 }
 
 /* شريط التنقل */
 .navbar {
-    background-color: #184ca4;
+    background-color: #0d47a1 ;
     color: white;
     opacity: 0.7;
     display: flex;
     justify-content: left;
     /* توزيع العناصر في الشريط */
     align-items: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* إضافة ظل */
+    clip-path: polygon(15% 100%, 85% 100%, 100% 0, 0 0);
+
     /* محاذاة العناصر عموديًا */
 }
 
@@ -118,3 +132,36 @@ body {
     position: absolute;
     top: 70%;
 }
+
+@media screen and (max-width: 1024px) {
+    .navbar {
+        background-color: #0d47a1 ;
+        color: white;
+        opacity: 0.7;
+        display: flex;
+        justify-content: left;
+        /* توزيع العناصر في الشريط */
+        align-items: center;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* إضافة ظل */
+        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    
+        /* محاذاة العناصر عموديًا */
+    }
+    .header {
+        background-size: cover;
+        background-position: center;
+        color: white;
+        text-align: center;
+        position: relative;
+        top: 0px;
+        z-index: 100;
+    }
+    .parent-container{
+        position: relative;
+        top: 0px;
+    }
+
+
+}
+
+    
