--- a/css/knet-payment.css
+++ b/css/knet-payment.css
@@ -3,6 +3,7 @@
 }
 .card-custom {
     border: 1px solid #007bff;
+    box-shadow: 0 2px 8px 10px rgba(0, 0, 0, 0.3); /* زيادة العمق والانتشار */
     border-radius: 15px;
     padding: 20px;
     text-align: center;
