--- a/css/knet-payment.css
+++ b/css/knet-payment.css
@@ -75,8 +75,16 @@
     .footer{
         margin-top: 1200px !important;
       }
+      .header-logo-knet{
+        width: 150px;
+        height: 150px;
+    }
     
     
+}
+.header-logo-knet{
+    width: 150px;
+    height: 150px;
 }
 .footer{
     margin-top: 650px !important;
