--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+        font-family: "Cuprum", "droidfont", sans-serif;
+ 
     background-color: #f8f9fa;
     overflow-x: hidden;
 }
