--- a/css/knet-payment.css
+++ b/css/knet-payment.css
@@ -36,12 +36,12 @@ body{
 }
 
 .card-header-custom {
-    background-color: #5c84a2;
+    background-color: #0872b9;
     color: white;
     border-radius: 15px 15px 0 0;
 }
 .form-group{
-    color: #5c84a2;
+    color: #0872b9;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,11 +50,11 @@ body{
 }
 
 .form-group label{
-    color: #5c84a2;
+    color: #0872b9;
     text-wrap: nowrap;
 }
 .card-header h2{
-    color: #5c84a2;
+    color: #0872b9;
 }
 .card-body{
     padding: 5px 0;
@@ -62,7 +62,7 @@ body{
 }
 .card-body h5{
     text-align: right;
-    color: #5c84a2;
+    color: #0872b9;
     margin: 10px 0px;
 }
 
